--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@fontsource/poppins": "^5.2.5",
     "axios": "^1.8.4",
     "jwt-decode": "^4.0.0",
