--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/poppins": "^5.2.5",
     "axios": "^1.8.4",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
